docs/.vuepress/theme/styles/dark.pcss
@media (prefers-color-scheme: dark) {
  body {
    @apply bg-gray-900 text-white;

    .site-name {
      @apply text-gray-100;
    }

    .doc-set-panel {
      .doc-set {
        @apply text-gray-200;
      }
    }

    .doc-set-current .title {
      @apply text-gray-100;
    }

    .right-bar .sidebar-links .sidebar-link {
      @apply text-gray-100;

      &.active {
        @apply text-gray-100;
      }
    }

    .page-nav .inner {
      @apply border-slate;
    }

    .vote-buttons .option {
      @apply border-slate;
    }

    .left-bar {
      background-color: rgba(0, 0, 0, 0.1);
    }

    .link-panel {
      background-color: rgba(45, 55, 72, var(--bg-opacity));
      border-color: rgba(255, 255, 255, 0.05);

      .subtitle {
        color: rgba(255, 255, 255, 0.4);
      }
    }

    .icon-link {
      .text-slate {
        color: rgba(255, 255, 255, 0.4);
      }
    }

    .nav-hamburger {
      background-color: rgba(0, 0, 0, 0.2);
      span {
        background-color: #fff;
      }
    }

    .search-box {
      .suggestions {
        @apply bg-gray-900;

        &:before {
          @apply border-gray-900;
          border-top-color: transparent;
          border-left-color: transparent;
          border-right-color: transparent;
        }
      }

      mark {
        @apply text-gray-400;
      }

      .suggestion-row {
        .page-title {
          border-color: rgba(0, 0, 0, 0.2);
        }
      }

      .suggestion {
        &.focused {
          background-color: rgba(255, 255, 255, 0.1);

          .suggestion-row {
            .page-title {
              @apply border-gray-700;
            }
          }
        }
      }

      input:focus {
        box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
        @apply text-white outline-none;
      }

      .suggestion-doc-set {
        @apply bg-cinder;
        color: #a0aec0;
      }
    }
  }

  .theme-default-content {
    h1,
    h2,
    h3,
    h4,
    h5 {
      @apply text-gray-100;
    }

    h2 {
      @apply border-slate;
    }

    code {
      @apply bg-cinder;
    }

    pre,
    pre[class*="language-"] {
      @apply bg-cinder;
    }

    .custom-block {
      div[class*="language-"] {
        background-color: rgba(0, 0, 0, 0.4);
      }

      code {
        background-color: rgba(0, 0, 0, 0.4);
      }

      &.tip,
      &.warning,
      &.danger {
        border-color: transparent;
        background-color: rgba(45, 55, 72, var(--bg-opacity));
      }
    }

    kbd {
      background-color: rgba(0, 0, 0, 0.4);
      color: #476582;
      border: 1px solid rgba(0, 0, 0, 0.3);
      border-bottom: 3px solid #111;
    }

    tr {
      border-top: 1px solid rgba(0, 0, 0, 0.2);

      &:nth-child(2n) {
        background: rgba(255, 255, 255, 0.05);
      }
    }

    th,
    td {
      border-color: rgba(45, 55, 72, 1);
    }

    div.table {
      border-color: rgba(45, 55, 72, 1);
    }

    dl {
      background-color: rgba(45, 55, 72, var(--bg-opacity));
    }

    .post-heading {
      .auto-toc {
        border-color: rgba(45, 55, 72, 1);
      }
    }

    .token.treeview-part .line-h:before,
    .token.treeview-part .line-v:before {
      border-left: 1px solid rgba(45, 55, 72, 1);
    }

    .token.treeview-part .line-h:after {
      border-bottom: 1px solid rgba(45, 55, 72, 1);
    }

    .token.treeview-part .line-v-last:before {
      border-left: 1px solid rgba(45, 55, 72, 1);
      border-bottom: 1px solid rgba(45, 55, 72, 1);
    }

    ul.code-language-switcher {
      background: rgba(45, 55, 72, var(--bg-opacity));

      li a.active {
        @apply text-cinder;
        background-color: rgba(255, 255, 255, 0.3);
      }
    }
  }

  div[class*="language-"] {
    @apply bg-cinder;

    .highlight-lines {
      .highlighted {
        @apply bg-black;
        background-color: rgba(45, 55, 72, 0.25);
      }
    }
  }

  a.sidebar-link {
    @apply text-gray-500;
  }

  .left-bar-bottom {
    @apply border-slate;
  }

  .doc-set-version {
    @apply border-slate;
  }

  #search input {
    @apply bg-slate;
  }
}

